<resources>
    <!-- <string name="server_address">http://192.168.1.7:8080/myParty/rest/</string> -->
    <string name="server_address">http://10.0.2.2:8080/myParty/rest/</string>
    <string name="app_name">My Party Organizer</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_to_myParty">New to My Party Organizer? Register here</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="register_new_account">Register new account</string>
    <string name="already_have_account">Already have an account? Login here</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_dialog">Are you shure that you want delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account_deleted">Account deleted</string>
    <string name="account_deleted_dialog">The account was successfully deleted</string>
    <string name="ok">Ok</string>
    <string name="account_registered">Account registered</string>
    <string name="account_registered_dialog">The account was successfully registered</string>
    <string name="error">Error</string>
    <string name="error_dialog">An error occurred, retry</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="name_already_in_use">Name already in use</string>
    <string name="name_already_in_use_dialog">Choose another name</string>
    <string name="date">Date</string>
    <string name="price">Price (€)</string>
    <string name="description">Description</string>
    <string name="my_parties">My parties</string>
    <string name="new_party">New party</string>
    <string name="create">Create</string>
    <string name="no_date">No date</string>
    <string name="party_created">Party created</string>
    <string name="party_created_dialog">The party was successfully created</string>
    <string name="error_id_dialog">An error occurred while trying to get the id of the organizer</string>
    <string name="tickets">Tickets:</string>
    <string name="tickets_sold">Tickets sold:</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_party">Edit party</string>
    <string name="party_edited">Party edited</string>
    <string name="party_edited_dialog">The party was successfully edited</string>
    <string name="delete_party">Delete party</string>
    <string name="delete_party_dialog">Are you shure that you want delete this party?</string>
    <string name="party_deleted">Party deleted</string>
    <string name="party_deleted_dialog">The party was successfully deleted</string>
    <string name="no_parties">No parties!</string>
    <string name="no_parties_subtitle">You have not added yet any party</string>
    <string name="city2">city</string>
    <string name="address2">address</string>
    <string name="field_missing">Error: field missing</string>
    <string name="field_missing_dialog">Be sure to compile every field before continue</string>
    <string name="location">Location</string>
    <string name="no_location">No location</string>
    <string name="search">Search</string>
    <string name="search_hint">Search location here</string>
    <string name="add_location">Add location</string>
    <string name="choose_location">Choose location</string>
    <string name="choose_location_dialog">Choose a location to continue</string>
    <string name="location_added">Location added</string>
    <string name="location_added_dialog">The location has been added to the party</string>
    <string name="location_permission_title">Location permission</string>
    <string name="location_permission_text">To use this feature you must give My Party the permission to access the location of the device</string>
    <string name="no_parties_text">There is no party created by you</string>
    <string name="register_max_length_title">One or more of the fields filled in is too long</string>
    <string name="register_max_length">One or more of the fields filled in is too long. The maximum length is 90 characters</string>
    <string name="new_party_max_length_title">Name, city and/or address are too long</string>
    <string name="new_party_max_length">Name, city and/or address are too long. The maximum length is 90 characters</string>
    <string name="description_max_length_title">Description is too long</string>
    <string name="description_max_length">Description is too long. The maximum length is 2800 characters</string>
    <string name="no_location_found_title">No location found</string>
    <string name="no_location_found">No location found corresponding to the address you have searched</string>
</resources>
