<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar3"
            android:title=""
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5">

                    <Button
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:layout_gravity="center"
                        android:text="@string/date"
                        android:onClick="showDatePickerDialog"
                        android:layout_marginBottom="10dip" />
                    <TextView
                        android:id="@+id/date_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dip"
                        android:hint="@string/no_date"
                        android:textColor="@color/colorText"
                        android:textSize="15dp"
                        android:textAlignment="center"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5">

                    <Button
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:layout_gravity="center"
                        android:text="@string/location"
                        android:onClick="startMapActivityForResult"
                        android:layout_marginBottom="10dip" />
                    <TextView
                        android:id="@+id/location_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dip"
                        android:hint="@string/no_location"
                        android:textColor="@color/colorText"
                        android:textSize="15dp"
                        android:textAlignment="center"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/name"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"/>
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:textSize="15sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/city"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"/>
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:textSize="15sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/address"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"/>
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:textSize="15sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/price"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"/>
            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="numberDecimal"
                android:textSize="15sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:layout_marginTop="10dip"
                android:text="@string/description"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"/>
            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:inputType="textMultiLine"
                android:maxLength="3000"
                android:textSize="15sp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"/>
            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_gravity="center"
                android:text="@string/edit"
                android:layout_marginBottom="20dip"/>
            <LinearLayout
                android:id="@+id/layout_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">
                </ProgressBar>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>