<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="My Party Organizer"
            android:fontFamily="@font/billabong"
            android:textSize="40sp"
            android:paddingTop="10dp"
            android:textColor="@color/colorText"
            android:paddingBottom="10dp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:hint="@string/username"
                android:padding="10dp"
                android:textCursorDrawable="@drawable/color_cursor"
                />
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:hint="@string/password"
                android:layout_marginBottom="30dp"
                android:padding="10dp"
                android:textCursorDrawable="@drawable/color_cursor"
                />
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorButton"
                android:layout_marginBottom="5dp" />
            <LinearLayout
                android:id="@+id/layout_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/colorButton">
                </ProgressBar>

            </LinearLayout>
            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorButton" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>